Completed assignment with notebook

--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Python Notebooks, Basics, and Data Structures\n",
     "\n",
-    "### Student Name:\n",
+    "### Student Name: Moses Koroma ( https://github.com/mokeyzz1 )\n",
     "\n",
     "Perform the tasks described in the Markdown cells below.  When you have completed the assignment make sure your code cells have all been run (and have output beneath them) and ensure you have committed and pushed ALL of your changes to your assignment repository.\n",
     "\n",
@@ -33,10 +33,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Division Result: 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define two numbers\n",
+    "num1 = 10\n",
+    "num2 = 2\n",
+    "\n",
+    "# Perform division\n",
+    "result = num1 / num2\n",
+    "\n",
+    "# Print the result\n",
+    "print(\"Division Result:\", result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,10 +65,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Factorial of 1 is 1\n",
+      "Factorial of 2 is 2\n",
+      "Factorial of 3 is 6\n",
+      "Factorial of 4 is 24\n",
+      "Factorial of 5 is 120\n",
+      "Factorial of 6 is 720\n",
+      "Factorial of 7 is 5040\n",
+      "Factorial of 8 is 40320\n",
+      "Factorial of 9 is 362880\n",
+      "Factorial of 10 is 3628800\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 3 \n",
+    "\n",
+    "for n in range(1, 11):\n",
+    "    factorial = 1\n",
+    "    for i in range(1, n + 1):\n",
+    "        factorial *= i\n",
+    "    print(f\"Factorial of {n} is {factorial}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,11 +104,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average: 0.0\n"
+     ]
+    }
+   ],
    "source": [
-    "testlist = [1,-1,2,-2,3,-3,4,-4]"
+    "def avg(numbers):\n",
+    "    return sum(numbers) / len(numbers)\n",
+    "\n",
+    "testlist = [1, -1, 2, -2, 3, -3, 4, -4]\n",
+    "print(\"Average:\", avg(testlist))\n",
+    "# Question 4 - Average of a list of numbers"
    ]
   },
   {
@@ -82,13 +138,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variance of list1: 1.13973309\n",
+      "Variance of list2: 0.9257232841\n"
+     ]
+    }
+   ],
    "source": [
+    "# Average function\n",
+    "def avg(numbers):\n",
+    "    return sum(numbers) / len(numbers)\n",
+    "\n",
+    "# Variance function using list comprehension\n",
+    "def variance(numbers):\n",
+    "    mean = avg(numbers)\n",
+    "    squared_diffs = [(x - mean) ** 2 for x in numbers]\n",
+    "    return sum(squared_diffs) / len(numbers)\n",
+    "\n",
+    "# Test lists\n",
     "list1 = [ 5.670e-1, -1.480e+0, -5.570e-1, -1.470e+0, 7.340e-1, 1.050e+0, 4.480e-1, 2.570e-1, -1.970e+0, -1.460e+0]\n",
     "list2 = [-1.780e+0, 2.640e-1, 1.160e+0, 9.080e-1, 1.780e+0, 1.080e+0, 1.050e+0, -4.630e-2, 1.520e+0, 5.350e-1]\n",
-    "# the variances of both lists should be relatively close to 1 (off by less than .15)"
+    "\n",
+    "# Print variances\n",
+    "print(\"Variance of list1:\", variance(list1))\n",
+    "print(\"Variance of list2:\", variance(list2))\n"
    ]
   },
   {
@@ -105,10 +184,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 5 elements: [5, 10, 15, 20, 25]\n",
+      "Last 5 elements: [55, 60, 65, 70, 75]\n",
+      "Reversed list: [75, 70, 65, 60, 55, 50, 45, 40, 35, 30, 25, 20, 15, 10, 5]\n",
+      "Every 2nd element: [5, 15, 25, 35, 45, 55, 65, 75]\n",
+      "Every 3rd element: [5, 20, 35, 50, 65]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A list with 15 elements\n",
+    "my_list = [5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75]\n",
+    "\n",
+    "# First 5 elements\n",
+    "print(\"First 5 elements:\", my_list[:5])\n",
+    "\n",
+    "# Last 5 elements\n",
+    "print(\"Last 5 elements:\", my_list[-5:])\n",
+    "\n",
+    "# Reversed list\n",
+    "print(\"Reversed list:\", my_list[::-1])\n",
+    "\n",
+    "# Every 2nd element\n",
+    "print(\"Every 2nd element:\", my_list[::2])\n",
+    "\n",
+    "# Every 3rd element\n",
+    "print(\"Every 3rd element:\", my_list[::3])\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,10 +235,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Introduction to Data Science with Python', 'course_number': 'CSIS 445', 'term': 'Fall 2025', 'credit_hours': 3, 'learning_objectives': ['Use Python to manipulate and analyze data', 'Understand data structures and control flow', 'Build reusable functions', 'Perform basic data cleaning', 'Use Jupyter Notebooks for reporting and visualization']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 7 \n",
+    "\n",
+    "course_info = {\n",
+    "    \"name\": \"Introduction to Data Science with Python\",\n",
+    "    \"course_number\": \"CSIS 445\",\n",
+    "    \"term\": \"Fall 2025\",\n",
+    "    \"credit_hours\": 3,\n",
+    "    \"learning_objectives\": [\n",
+    "        \"Use Python to manipulate and analyze data\",\n",
+    "        \"Understand data structures and control flow\",\n",
+    "        \"Build reusable functions\",\n",
+    "        \"Perform basic data cleaning\",\n",
+    "        \"Use Jupyter Notebooks for reporting and visualization\"\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "# Print the dictionary\n",
+    "print(course_info)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,18 +276,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Level 3 spells: ['Mass Healing Word', 'Nondetection', 'Revivify', 'Feign Death', 'Speak with Dead']\n"
+     ]
+    }
+   ],
    "source": [
-    "player_character = {'name': 'Kitab',\n",
-    "                   'class': [('Cleric: Knowledge', 7)],\n",
-    "                   'spells': {'cantrip': ['Guidance', 'Light', 'Thaumaturgy', 'Toll the Dead', 'Word of Radiance'],\n",
-    "                             'level 1': ['Command', 'Detect Magic', 'Healing Word', 'Identify', 'Sleep'],\n",
-    "                             'level 2': ['Augury', 'Calm Emotions', 'Command', 'Invisibility', 'Lesser Restoration'],\n",
-    "                             'level 3': ['Mass Healing Word', 'Nondetection', 'Revivify', 'Feign Death', 'Speak with Dead'],\n",
-    "                             'level 4': ['Banishment', 'Confusion']}\n",
-    "                   }"
+    "player_character = {\n",
+    "    'name': 'Kitab',\n",
+    "    'class': [('Cleric: Knowledge', 7)],\n",
+    "    'spells': {\n",
+    "        'cantrip': ['Guidance', 'Light', 'Thaumaturgy', 'Toll the Dead', 'Word of Radiance'],\n",
+    "        'level 1': ['Command', 'Detect Magic', 'Healing Word', 'Identify', 'Sleep'],\n",
+    "        'level 2': ['Augury', 'Calm Emotions', 'Command', 'Invisibility', 'Lesser Restoration'],\n",
+    "        'level 3': ['Mass Healing Word', 'Nondetection', 'Revivify', 'Feign Death', 'Speak with Dead'],\n",
+    "        'level 4': ['Banishment', 'Confusion']\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# Print level 3 spells\n",
+    "print(\"Level 3 spells:\", player_character['spells']['level 3'])\n"
    ]
   },
   {
@@ -163,11 +313,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique values: 12\n"
+     ]
+    }
+   ],
    "source": [
-    "values = [10, 11, 10, 8, 1, 12, 0, 1, 6, 5, 5, 13, 6, 15, 0, 0, 1, 1, 9, 7]"
+    "values = [10, 11, 10, 8, 1, 12, 0, 1, 6, 5, 5, 13, 6, 15, 0, 0, 1, 1, 9, 7]\n",
+    "\n",
+    "# Convert to a set to remove duplicates\n",
+    "unique_values = set(values)\n",
+    "\n",
+    "# Print the number of unique elements\n",
+    "print(\"Number of unique values:\", len(unique_values))\n"
    ]
   },
   {
@@ -202,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
