Exported notebook to HTML

--- a/S576958.ipynb
+++ b/S576958.ipynb
@@ -51,6 +51,34 @@
     "    right_stars = \"*\" * i\n",
     "    print(left_stars + spaces + right_stars)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7417f2b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook S576958.ipynb to html\n",
+      "[NbConvertApp] Writing 273023 bytes to S576958.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "!jupyter nbconvert --to html S576958.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba497a8b",
+   "metadata": {},
+   "source": [
+    "3. Using loops (and potentially conditionals), write Python code that prints the factorial of each integer from 1 through 10 (which you can store in a variable if you want). The factorial of an integer is the product of all of the integers of 1 through the number. Print the result with an appropriate label."
+   ]
   }
  ],
  "metadata": {
