--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -348,6 +348,24 @@
     "```\n",
     "Make sure to add and submit both the new notebook and the changes to this notebook for this assignment."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook python-ds.ipynb to html\n",
+      "[NbConvertApp] Writing 301308 bytes to python-ds.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to html python-ds.ipynb"
+   ]
   }
  ],
  "metadata": {
